--- a/style.css
+++ b/style.css
@@ -1,44 +1,125 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
 body{
+    background-color: rgb(225, 233, 233);
+    padding: 0;
     margin: 0;
 }
 
 header{
-    background-color: rgb(222, 222, 222);
-    border-bottom: 1px solid #ef3cc5;
-    text-align: center;
+    line-height: 70px;
+    background-color: white;
+    margin-bottom: 5px;
 }
+
+.header_logo{
+    width: 70px;
+    height: 70px;
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.titolo{
+    display: inline-block;
+    vertical-align: middle;
+    margin: 0;
+}
+
+/*MAIN*/
 
 main{
-    padding: 10px;
-}
-
-footer{
-    border-top: 1px solid #ef3cc5;
-}
-
-h2{
-    color: #ee9d3a;
-}
-
-h3{
-    margin-bottom: -10px;
-    color: #feac4f;
-}
-
-.container{
-    width: 50%;
     margin: 0 auto;
+    width: 60%;
+    border-radius: 5px;
 }
 
-.container-main{
-    padding: 0 15px;
+/*PARTE DEI BUTTON*/
+.container{
+    border-radius: 4px;
+    background-color: white;
 }
 
-.img_logo{
-    width: 200px;
-    height: 200px;
+
+.btn_container{
+    padding: 5px 20px;
+    margin-bottom: 2px;
 }
 
-.item p{
-    text-align: justify;
+.btn{
+    border-radius: 5px;
+    padding: 5px 9px;
+    font-size: 10px;
+    border: 1px solid;
+}
+
+.btn_task{
+   background-color: rgb(0, 135, 193); 
+   color: white;
+}
+
+.btn_section{
+    color: lightgray;
+    background-color: white;
+    border-color: lightgray;
+}
+
+/*PARTE DELLE TASK*/
+.mt1{
+    margin-top: 1px;
+    padding: 10px 0;
+}
+
+.task-container{
+    padding-left: 20px;
+    padding-bottom: 5px;
+}
+
+.task-container .check{
+    padding-bottom: 3px;
+}
+
+.check *{
+    vertical-align: middle;
+}
+
+.check p{
+    display: inline-block;
+    font-size: 15px;
+}
+
+.check-container{
+    display: inline-block;
+    width: 8px;
+    height: 8px;
+    font-size: 8px;
+    border-radius: 100%;
+    border: 1px solid;
+    padding: 1px 1px;
+    background-color: white;
+}
+
+.check-green{
+    color: green;
+    border-color: green;
+}
+
+.check-red{
+    color: red;
+    border-color: red;
+}
+
+.check-container span{
+    margin-left: 1px;
+}
+
+.btn-category{
+    color: white;
+    display: inline-block;
+    font-size: 8px;
+    padding: 3px 5px;
+    border-radius: 10px;
+    background-color: green;
 }
